// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="components-collapsible wp-components-collapsible css-j1yu9m"
  data-expanded="false"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="false"
    class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button components-collapsible-trigger wp-components-collapsible-trigger css-18x2gjr"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="components-flex-item wp-components-flex-item css-19mrak6"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show/Hide
    </span>
    <span
      class="components-elevation wp-components-elevation css-17x6dun"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="css-li0a7z components-collapsible-content wp-components-collapsible-content"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    hidden=""
    id="collapsible"
    style="display: none;"
  >
    <div
      class="components-animated wp-components-animated css-1qs21wj"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: 0px; opacity: 0; display: none;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;

exports[`props should render visible 1`] = `
<div
  class="components-collapsible wp-components-collapsible css-j1yu9m"
  data-expanded="true"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="true"
    class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button components-collapsible-trigger wp-components-collapsible-trigger css-18x2gjr"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="components-flex-item wp-components-flex-item css-19mrak6"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show/Hide
    </span>
    <span
      class="components-elevation wp-components-elevation css-17x6dun"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="css-li0a7z components-collapsible-content wp-components-collapsible-content"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    id="collapsible"
  >
    <div
      class="components-animated wp-components-animated css-1qs21wj"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: auto; opacity: 1; display: block;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;
